# moddingpy

./: README.md  pyproject.toml
.github/workflows/: doc.yml
docs/source/: conf.py  developers.rst  index.rst  moddingpy.rst  pymodloader.rst  reference.rst
docs/source/reference/: reference.rst
docs/source/reference/moddingpy/: moddingpy.rst
docs/source/reference/pymodloader/: index.rst  load.rst  pymodloader.rst
src/moddingpy/: __init__.py
src/pymodloader/: __init__.py  load.py
